--- a/.eslintrc
+++ b/.eslintrc
@@ -1,21 +1,42 @@
 {
-    "env": {
-        "browser": true,
-        "jest": true,
-        "es6": true
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "globals": {
+    "window": true,
+    "define": true,
+    "require": true,
+    "module": true
+  },
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true,
+      "jsx": true,
+      "es6": true
     },
-    "plugins": [
-        "import"
-    ],
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-console": "warn",
-        "no-eval": "error",
-        "import/first": "error",
-        "react-hooks/exhaustive-deps": 0
-    }
+    "sourceType": "module"
+  },
+  "plugins": ["babel", "react"],
+  "rules": {
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "double"],
+    "semi": ["error", "always"],
+    "react/jsx-boolean-value": 0,
+    "react/jsx-closing-bracket-location": 1,
+    "react/jsx-curly-spacing": [0, "always"],
+    "react/jsx-indent-props": [1, 2],
+    "react/jsx-no-undef": 1,
+    "react/jsx-uses-react": 1,
+    "react/jsx-uses-vars": 1,
+    "react/react-in-jsx-scope": 1,
+    "react/prefer-es6-class": 1,
+    "react/jsx-no-bind": 0,
+    "eact/wrap-multilines": 0,
+    "no-unused-vars": 0,
+    "react/prop-types": 0
+  }
 }
